--- a/index.html
+++ b/index.html
@@ -220,19 +220,19 @@ function myFunction() {
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-4">
-					<h3>Phone Support</h3>					<strong class="w3-large"><a 			href="tel+ 07051262246" 			class=" w3-hover-					none">07051262246</a><br><a 			href="tel+ 08167699022" 			class=" w3-hover-					none">08167699022</a>			</strong>
+					<h3>Phone Support</h3>					<strong class="w3-medium"><a 			href="tel+ 07051262246" 			class=" w3-hover-					none">07051262246</a><br><a 			href="tel+ 08167699022" 			class=" w3-hover-					none">08167699022</a>			</strong>
 					<h3>Email Support</h3>
 					<p class="email small"><img src="image/gmail.jpg" class="img-fluid" alt="gmail"> mahmudcyber1@gmail.com</p>
 				</div>
 				<div class="col-4">
-					<h3>About Us</h3>					<p class="about">This web site was designed by Mahmudcyber Solution Team  to create awareness and save lives of people from brutal COVID-19 pendamic.</p>				
+					<h3>About Us</h3>					<p class="about small">This web site was designed by Mahmudcyber Solution Team  to create awareness and save lives of people from brutal COVID-19 pendamic.</p>				
 				</div>
 				<div class="col-4">
 					<h3>Connect with Us</h3>
 					<ul class="list-unstyled">
-						<li class="media py-1"><a href="https://www.facebook.com/Mahmudcyber1"><img src="image/facebook.png"class="img-fluid" alt="facebook" > Facebook</a></li>
-						<li class="media"><a href="https://www.twitter.com/mahmudcyber"><img src="image/twitter.jpg"class="img-fluid" alt="twitter"> Twitter</a></li>
-						<li class="media py-1"><a href="https://www.youtube.com/mahmucyber"><img src="image/youtube.png"class="img-fluid" alt="youtube"> Youtube</a></li>
+						<li class="media py-1 "><a href="https://www.facebook.com/Mahmudcyber1"><img src="image/facebook.png"class="img-fluid" alt="facebook" > Facebook</a></li>
+						<li class="media" ><a href="https://www.twitter.com/mahmudcyber"><img src="image/twitter.jpg"class="img-fluid" alt="twitter"> Twitter</a></li>
+						<li class="media py-1 "><a href="https://www.youtube.com/mahmucyber"><img src="image/youtube.png"class="img-fluid" alt="youtube"> Youtube</a></li>
 					</ul>				
 				</div>
 			</div>
